registry/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-repository-k8s
  namespace: infra
  labels:
    app: private-repository-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-repository-k8s
  template:
    metadata:
      labels:
        app: private-repository-k8s
    spec:
      volumes:
      - name: private-repository-k8s
      - name: volv
        persistentVolumeClaim:
          claimName: private-repository-k8s
      containers:
        - image: registry:2
          name: private-repository-k8s
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: volv
            mountPath: /var/lib/registry
