registry/registry-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: private-repository-k8s
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  tls:
  - hosts:
    - registry.k3d.localhost
    secretName: private-registry-key
  rules:
    - host: registry.k3d.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: private-repository-k8s
                port:
                  number: 5000
